js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib2/MyClass.kt
private class MyClass : C {
}

internal konst myObject: C = MyClass()
